# annoyingBot

./: .env.default  .gitignore  LICENSE  README.md  TODO.txt  app.py  pyproject.toml  requirements.txt  songBotStuff.txt  spotify.py  spotifytest.py
musicbot/: music.py
