[tool.poetry]
name = "repl_python3_annoyingBot"
version = "0.1.0"
description = ""
authors = ["Sheep", "March"]

[tool.poetry.dependencies]
python = "^3.8"
pyttsx3 = "^2.90"
spotipy = "^2.18.0"
youtube_dl = "^2021.6.6"
async-timeout = "^3.0.1"
discord = "^1.7.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
